# tsunami

./: .gitignore  Cargo.toml  LICENSE  flake.nix  readme.md  rustfmt.toml
.github/actions/install_rust/: action.yml
.github/workflows/: audit.yml  rust.yml
src/: bencode.rs  bencode_lexer.lalrpop  connection.rs  download.rs  error.rs  lib.rs  peer.rs  torrent.rs  torrent_ast.rs  tsunami.rs  utils.rs
src/test_data/: mock_dir.torrent  mock_file.torrent
src/tests/: mod.rs  peer.rs  torrent.rs  torrent_ast.rs
src/tests/test_data/: mod.rs
