[package]
name = "tsunami"
version = "0.1.0"
authors = ["CrimsonVoid"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
once_cell = { version = "1.16.0", default-features = false }
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
nom = { version = "7.1.1", default-features = false }
ring = { version = "0.16.20", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
time = { version = "0.3.17", default-features = false, features = ["std"] }
tokio = { version = "1.22.0", default-features = false, features = ["net", "io-util", "macros"] }
hyper = { version = "0.14.23", default-features = false, features = ["client", "http1", "tcp"] }

[dev-dependencies]
tokio = { version = "1.22.0", default-features = false, features = ["macros"] }
