[package]
name = "tsunami"
version = "0.1.0"
authors = ["CrimsonVoid"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0"
once_cell = { version = "1.19", default-features = false }
bitvec = { version = "1.0", default-features = false, features = ["alloc"] }
sha1 = { version = "0.10", default-features = false }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
time = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1.41", default-features = false, features = ["net", "io-util", "macros"] }
hyper = { version = "0.14", default-features = false, features = ["client", "http1", "tcp"] }

[dev-dependencies]
tokio = { version = "1.41", default-features = false, features = ["macros"] }
